# chessvision

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  autolabel_images.py  capture_dataset.py  detect_chessboard.py  detect_corners_cv.py  detect_pieces.py  export_model.py  main.py  prototype.ipynb  pyproject.toml  settings.py  track_game.py  train_pieces.py  uv.toml  view_camera.py  zensical.toml
chessvision/: __init__.py  settings.py
chessvision/app/: detect.py  view_camera.py  web_stream.py
chessvision/core/: board.py  display.py  occupancy.py  tracking.py
chessvision/training/: autolabel_images.py  capture_dataset.py  export.py  train.py
datasets/chess-pieces/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/chess-pieces/test/labels/: frame_000300_jpg.rf.5pXZRD03VWB0R00F7TOj.txt  frame_000476_jpg.rf.sQK5jyG2ciqZwhZyoR0p.txt  frame_000588_jpg.rf.ZjoFLr7zJlfNK1N0pdVC.txt  frame_000636_jpg.rf.MEN74DnACrJV6IxVHoXN.txt  frame_000748_jpg.rf.pcDpofGF5pNcEEJRhki8.txt  frame_000776_jpg.rf.59bx4zEFMxmsSzwfJ6Tb.txt  frame_000876_jpg.rf.AWdjyCOX1RNWSf7vIfiZ.txt  frame_000880_jpg.rf.kpyN1owJTkTksdVOwkYh.txt  frame_001320_jpg.rf.QiL6xrlyQ3yCglCz9CFZ.txt  frame_001396_jpg.rf.JriIWQACGi6vload642a.txt  frame_003248_jpg.rf.OhrlwOeM9FQKDk7MI8gd.txt  frame_003536_jpg.rf.NdCaItIvFmGsI44hT04L.txt  frame_004400_jpg.rf.GMbcPMyS5JiASPiPW9KJ.txt  frame_004476_jpg.rf.HBEO4thNuIOFF4jDahNL.txt  frame_004848_jpg.rf.EaG3EiiYJuYAKYoopmFc.txt  frame_004980_jpg.rf.hsaX6q1jIKgQ4K2TdRBj.txt  frame_005064_jpg.rf.ANzVOS7NoaKe1xUbDk8I.txt  frame_005384_jpg.rf.RH8Vvqq6OMKR9C3cwUCQ.txt  frame_005412_jpg.rf.qUFDSoFPNhqYTu2RCJWt.txt  frame_006856_jpg.rf.1C0EwOQQ0qgiPEzhDRWp.txt  frame_006912_jpg.rf.25F0WfI9t0MffnNWjERY.txt  frame_006944_jpg.rf.gsVYV77lcQHUIT9k6kfh.txt  frame_007600_jpg.rf.tDTtxyyf7zYbogW0S2XT.txt  frame_008576_jpg.rf.BPWVquYqtynQkUC8x9k0.txt  frame_008820_jpg.rf.kc8lp8KNdsWO72WCt6ZF.txt  frame_009700_jpg.rf.Q5Xo1xE6BqIHXlQuxUOQ.txt  frame_010812_jpg.rf.5iFYtA7LOpyLnZEnr1lD.txt  frame_011844_jpg.rf.53AaNAzV8Cji85hA37e6.txt  frame_012864_jpg.rf.Qq1THz4GRDhQZIOSpxGx.txt  frame_013020_jpg.rf.kAHqq7Mc8F36UFeCjoJ6.txt  frame_013044_jpg.rf.N6mUYvEZKYdwNl4GbAuF.txt  frame_014272_jpg.rf.ch9DdF0NgVyeB5nIxytn.txt  frame_014428_jpg.rf.5fbBGlUSITHlxAeDBpxs.txt  frame_014484_jpg.rf.plRpfFYGDB79pn7xNYLg.txt  frame_015028_jpg.rf.f6B6wOgMVwSHJ3fkZ7u8.txt  frame_015268_jpg.rf.mKcZ6J1G3MasWpTLWKAP.txt  frame_015360_jpg.rf.W5W2EjF9a5vUDVl2wIOT.txt  frame_016088_jpg.rf.FGT4Ei7yEGupqcVURGVq.txt  frame_017484_jpg.rf.kuWaXgw0LlvFOshZJ5Je.txt  frame_018000_jpg.rf.D89jW7BmWaswQjtImZh7.txt  (+22 more)
datasets/chess-pieces/train/: labels.cache
datasets/chess-pieces/train/labels/: frame_000000_jpg.rf.FJDzifvTHW4GuI2Mb5sg.txt  frame_000004_jpg.rf.n6JdBFJee9Cvi3YFAKQj.txt  frame_000004_jpg.rf.zct9uqApb0h0NpOOfK1K.txt  frame_000028_jpg.rf.p7aWaWt03IOm60AMAWl6.txt  frame_000036_jpg.rf.OMrPLgiygBDa7KFlPQnP.txt  frame_000236_jpg.rf.KrKoa8iNwURdf4VOu7pK.txt  frame_000268_jpg.rf.fbEYGT7HkFP7HVbzhqfV.txt  (+426 more)
datasets/chess-pieces/valid/: labels.cache
datasets/combined/: data.yaml
datasets/my-pieces/: data.yaml
datasets/my-pieces/train/: labels.cache
datasets/my-pieces/valid/: labels.cache
docs/: architecture.md  configuration.md  development.md  hardware.md  index.md  training.md
games/: game_20260619_121831.pgn
jupyter_notebooks/: app_design_walkthrough.ipynb  prototype.ipynb
models/my-pieces_ncnn_model/: metadata.yaml  model_ncnn.py
models/pieces_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
notebooks/chessboard_detection/: ai_generated_algoritm.ipynb  find_chessboard.ipynb  find_contours.ipynb
notebooks/piece_detection/: detect_piece.ipynb
notebooks/tile_detection/: find_contours.ipynb
runs/detect/train/: args.yaml  results.csv
runs/detect/train-2/: args.yaml  results.csv
runs/detect/train-3/: args.yaml  results.csv
runs/detect/train-4/: args.yaml  results.csv
scripts/: chess_cell.py  chess_pieces.py  chessboard_extractor.py  chessvision.py  tile_extractor.py
scripts/chessboard_extractors/: find_chessboard.py
scripts/tile_extractors/: find_contours.py
(+515 files in other folders)
