[project]
name = "chessvision"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "onnxruntime>=1.26.0",
    "pydantic-settings>=2.14.1",
    "ultralytics>=8.4.67",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
