[project]
name = "chessvision"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "onnx>=1.22.0",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.14.1",
    "ultralytics>=8.4.67",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
# On x86_64 (laptop/desktop with CUDA) pull torch from PyTorch's CUDA index.
# On aarch64 (RPi4) no source override → falls back to PyPI, which is fine
# because inference runs via onnxruntime, not torch's CPU kernels.
torch = [
    { index = "pytorch-cu130", marker = "platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "platform_machine == 'x86_64'" },
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
