[project]
name = "chessvision"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "ncnn>=1.0.20260526",
    "onnx>=1.22.0",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pydantic-settings>=2.14.1",
    "ultralytics>=8.4.67",
]

# Console scripts: run any of these with `uv run <name>` (e.g. `uv run gm-detect`).
[project.scripts]
gm-detect = "chessvision.app.detect:cli"        # live board + piece detection / recording
gm-view = "chessvision.app.view_camera:main"    # raw camera stream preview
gm-corners = "chessvision.core.board:main"      # board-detection debug (corners + warp)
gm-capture = "chessvision.training.capture_dataset:main"   # capture a labelled dataset
gm-autolabel = "chessvision.training.autolabel_images:main"  # auto-label saved frames
gm-train = "chessvision.training.train:main"    # fine-tune the piece model
gm-export = "chessvision.training.export:main"  # export weights (ncnn/onnx)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chessvision"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
# On x86_64 (laptop/desktop with CUDA) pull torch from PyTorch's CUDA index.
# On aarch64 (RPi4) no source override → falls back to PyPI, which is fine
# because inference runs via onnxruntime, not torch's CPU kernels.
torch = [
    { index = "pytorch-cu130", marker = "platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "platform_machine == 'x86_64'" },
]

[tool.ruff]
target-version = "py313"
line-length = 88
# Generated (ncnn export), training outputs, and scratch notebooks aren't source.
extend-exclude = ["jupyter_notebooks", "models", "runs", "datasets"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
